# kpilogistica

./: .gitignore  CAMBIOS_REPORTES.md  NUEVA_FUNCIONALIDAD.md  README.md  pyproject.toml  vercel.json
backend/: requirements.txt
backend/app/: database.py  main.py
backend/app/data/: kpis.json
backend/app/routers/: kpis.py  reportes.py  upload.py
ejemplos/: clientes.xlsx  generar_ejemplos.py  pedidos_grupo.csv  pedidos_tienda.csv
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
