[project]
name = "kpilogistica"
version = "0.1.0"
description = "App web de KPIs para logística"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "openpyxl==3.1.2",
    "python-multipart==0.0.9"
]

[tool.vercel]
entrypoint = "backend.app.main:app"